# lidar-camera-calibrator

./: .gitignore  CMakeLists.txt  README.md  todolist.md
src/: ArgumentsParser.cpp  ArgumentsParser.h  IMU.cpp  IMU.h  IMUPoints.cpp  IMUPoints.h  IMUPointsLoader.cpp  IMUPointsLoader.h  Point.cpp  Point.h  PointCloud.cpp  PointCloud.h  PointCloudLoader.cpp  PointCloudLoader.h  main.cpp  main.h  main_detection.cpp  main_registration.cpp
